# open-models-playground

./: .gitignore  README.md  pyproject.toml
docs/: getting-started.md
open-models-playground/: LICENSE  README.md
open-models-playground/results/: results.example.md
open-models-playground/src/open_models_bench/: __init__.py  cli.py  client.py  models.py  prompts.py
open-models-playground/tests/: test_models.py  test_report.py
results/: results.md
src/open_models_bench/: __main__.py  benchmark.py  report.py
