[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-models-bench"
version = "0.1.0"
description = "Benchmark and compare local open models served by Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jyoti Shukla" }]
keywords = ["llm", "open-models", "ollama", "benchmark", "evaluation"]
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
open-models-bench = "open_models_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
